--- a/le-12-fatiche-di-javascript/index.html
+++ b/le-12-fatiche-di-javascript/index.html
@@ -4,6 +4,7 @@
  -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,12 +12,14 @@
     <title>Le 12 fatiche di JavaScript</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
 
     <main class="container">
         <div class="row my-4">
             <div class="col">
-                <input type="text" name="player" class="form-control" placeholder="Inserisci il nome di una persona" value="" autofocus>
+                <input type="text" name="player" class="form-control" placeholder="Inserisci il nome di una persona"
+                    value="" autofocus>
             </div>
         </div>
 
@@ -31,4 +34,5 @@
     <!-- <script src="app.js"></script> -->
     <script src="app-buggata.js"></script>
 </body>
+
 </html>
